NXP-33619: cleanup / format