@@ -1,5 +1,5 @@
 /*
- * (C) Copyright 2019-2020 Nuxeo (http://nuxeo.com/) and others.
+ * (C) Copyright 2019-2026 Nuxeo (http://nuxeo.com/) and others.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,13 +16,9 @@
  * Contributors:
  *     Salem Aouana
  */
-
 package org.nuxeo.ecm.platform.comment.impl;
 
 import static java.lang.Boolean.TRUE;
-import static java.util.Collections.emptyList;
-import static java.util.Collections.singletonList;
-import static java.util.Collections.singletonMap;
 import static java.util.Objects.requireNonNull;
 import static java.util.stream.Collectors.collectingAndThen;
 import static java.util.stream.Collectors.toList;
@@ -55,7 +51,6 @@ import java.io.Serializable;
 import java.time.Instant;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -269,7 +264,7 @@ public class TreeCommentManager extends AbstractCommentManager {
             if (!principal.isAdministrator()
                     && !commentDoc.getPropertyValue(COMMENT_AUTHOR_PROPERTY).equals(principal.getName())
                     && !session.hasPermission(principal, topLevelDoc.getRef(), EVERYTHING)) {
-                throw new CommentSecurityException(String.format("The user %s cannot edit comments of document %s",
+                throw new CommentSecurityException("The user %s cannot edit comments of document %s".formatted(
                         principal.getName(), commentDoc.getPropertyValue(COMMENT_PARENT_ID_PROPERTY)));
             }
             if (comment.getModificationDate() == null) {
@@ -346,11 +341,11 @@ public class TreeCommentManager extends AbstractCommentManager {
     protected void checkCreateCommentPermissions(CoreSession session, DocumentRef documentRef) {
         try {
             if (!session.hasPermission(documentRef, SecurityConstants.READ)) {
-                throw new CommentSecurityException(String.format("The user %s can not create comments on document %s",
+                throw new CommentSecurityException("The user %s can not create comments on document %s".formatted(
                         session.getPrincipal().getName(), documentRef));
             }
         } catch (DocumentNotFoundException dnfe) {
-            throw new CommentNotFoundException(String.format("The comment %s does not exist.", documentRef), dnfe);
+            throw new CommentNotFoundException("The comment %s does not exist.".formatted(documentRef), dnfe);
         }
     }
 
@@ -362,20 +357,19 @@ public class TreeCommentManager extends AbstractCommentManager {
     @SuppressWarnings("unchecked")
     protected DocumentModel getExternalCommentModel(CoreSession session, String documentId, String entityId) {
         PageProviderService ppService = Framework.getService(PageProviderService.class);
-        Map<String, Serializable> props = singletonMap(CORE_SESSION_PROPERTY, (Serializable) session);
+        Map<String, Serializable> props = Map.of(CORE_SESSION_PROPERTY, (Serializable) session);
         PageProvider<DocumentModel> pageProvider;
         // backward compatibility
         if (isBlank(documentId)) {
             pageProvider = (PageProvider<DocumentModel>) ppService.getPageProvider(GET_COMMENT_PAGE_PROVIDER_NAME,
-                    Collections.emptyList(), 1L, 0L, props, entityId);
+                    List.of(), 1L, 0L, props, entityId);
         } else {
             pageProvider = (PageProvider<DocumentModel>) ppService.getPageProvider(
-                    GET_EXTERNAL_COMMENT_PAGE_PROVIDER_NAME, Collections.emptyList(), 1L, 0L, props, documentId,
-                    entityId);
+                    GET_EXTERNAL_COMMENT_PAGE_PROVIDER_NAME, List.of(), 1L, 0L, props, documentId, entityId);
         }
         List<DocumentModel> documents = pageProvider.getCurrentPage();
         if (documents.isEmpty()) {
-            throw new CommentNotFoundException(String.format("The external comment %s does not exist.", entityId));
+            throw new CommentNotFoundException("The external comment %s does not exist.".formatted(entityId));
         }
         return documents.getFirst();
     }
@@ -395,8 +389,8 @@ public class TreeCommentManager extends AbstractCommentManager {
             if (!(principal.isAdministrator() //
                     || author.equals(principal.getName()) //
                     || s.hasPermission(principal, ancestorRef, EVERYTHING))) {
-                throw new CommentSecurityException(String.format(
-                        "The user %s cannot delete comments of the document %s", principal.getName(), ancestorRef));
+                throw new CommentSecurityException("The user %s cannot delete comments of the document %s".formatted(
+                        principal.getName(), ancestorRef));
             }
             Comment comment = commentDoc.getAdapter(Comment.class);
 
@@ -420,9 +414,9 @@ public class TreeCommentManager extends AbstractCommentManager {
         try {
             return session.getDocument(new IdRef(id));
         } catch (DocumentNotFoundException dnfe) {
-            throw new CommentNotFoundException(String.format("The comment %s does not exist.", id), dnfe);
+            throw new CommentNotFoundException("The comment %s does not exist.".formatted(id), dnfe);
         } catch (DocumentSecurityException dse) {
-            throw new CommentSecurityException(String.format("The user %s does not have access to the comment %s",
+            throw new CommentSecurityException("The user %s does not have access to the comment %s".formatted(
                     session.getPrincipal().getName(), id), dse);
         }
     }
@@ -445,17 +439,17 @@ public class TreeCommentManager extends AbstractCommentManager {
 
             PageProviderService ppService = Framework.getService(PageProviderService.class);
 
-            Map<String, Serializable> props = Collections.singletonMap(CORE_SESSION_PROPERTY, (Serializable) session);
-            List<SortInfo> sortInfos = singletonList(new SortInfo(COMMENT_CREATION_DATE_PROPERTY, sortAscending));
+            Map<String, Serializable> props = Map.of(CORE_SESSION_PROPERTY, (Serializable) session);
+            List<SortInfo> sortInfos = List.of(new SortInfo(COMMENT_CREATION_DATE_PROPERTY, sortAscending));
             var pageProvider = (PageProvider<DocumentModel>) ppService.getPageProvider(
                     GET_COMMENTS_FOR_DOCUMENT_PAGE_PROVIDER_NAME, sortInfos, pageSize, currentPageIndex, props,
                     documentId);
             return new PartialList<>(pageProvider.getCurrentPage(), pageProvider.getResultsCount());
         } catch (DocumentNotFoundException dnfe) {
-            return new PartialList<>(emptyList(), 0);
+            return new PartialList<>(List.of(), 0);
         } catch (DocumentSecurityException dse) {
             throw new CommentSecurityException(
-                    String.format("The user %s does not have access to the comments of document %s",
+                    "The user %s does not have access to the comments of document %s".formatted(
                             session.getPrincipal().getName(), documentId),
                     dse);
         }
@@ -483,7 +477,7 @@ public class TreeCommentManager extends AbstractCommentManager {
         topLevelDoc.addFacet(HAS_RELATED_TEXT);
 
         // Get the related text id (the related text key is different in the case of Comment or Annotation)
-        String relatedTextId = String.format(COMMENT_RELATED_TEXT_ID, commentId);
+        String relatedTextId = COMMENT_RELATED_TEXT_ID.formatted(commentId);
 
         @SuppressWarnings("unchecked")
         List<Map<String, String>> resources = (List<Map<String, String>>) topLevelDoc.getPropertyValue(
@@ -528,8 +522,7 @@ public class TreeCommentManager extends AbstractCommentManager {
      * @since 11.1
      */
     protected boolean hasComments(CoreSession session, DocumentModel document) {
-        String query = String.format( //
-                QUERY_GET_COMMENTS_UUID_BY_COMMENT_ANCESTOR, document.getId());
+        String query = QUERY_GET_COMMENTS_UUID_BY_COMMENT_ANCESTOR.formatted(document.getId());
         return !session.queryProjection(query, 1, 0).isEmpty();
     }
 
@@ -539,8 +532,7 @@ public class TreeCommentManager extends AbstractCommentManager {
      * @since 11.1
      */
     protected boolean hasComments(CoreSession session, DocumentModel document, String user) {
-        String query = String.format( //
-                QUERY_GET_COMMENTS_UUID_BY_COMMENT_ANCESTOR_AND_AUTHOR, document.getId(), user);
+        String query = QUERY_GET_COMMENTS_UUID_BY_COMMENT_ANCESTOR_AND_AUTHOR.formatted(document.getId(), user);
         return !session.queryProjection(query, 1, 0).isEmpty();
     }
 
